<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:nestedScrollingEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="140dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_padding"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_image_desc"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded"
                tools:src="@drawable/poster_alita" />

        <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/default_match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:text="@string/movie_release_date"
                android:textSize="@dimen/default_header_text_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/moviePoster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/moviePoster" />

        <TextView
                android:id="@+id/movieReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:textSize="@dimen/default_title_text_size"
                app:layout_constraintLeft_toLeftOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="@string/movie_year" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/movie_rate"
                android:textSize="@dimen/default_header_text_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/movieReleaseDate"
                app:layout_constraintTop_toBottomOf="@+id/movieReleaseDate" />

        <TextView
                android:id="@+id/movieRateAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:textSize="@dimen/default_title_text_size"
                app:layout_constraintLeft_toLeftOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="@string/movie_vote_average_sample" />

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/movie_language"
                android:textSize="@dimen/default_header_text_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/movieRateAverage"
                app:layout_constraintTop_toBottomOf="@+id/movieRateAverage" />

        <TextView
                android:id="@+id/movieLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:textSize="@dimen/default_title_text_size"
                app:layout_constraintLeft_toLeftOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="@string/movie_language_sample" />

        <TextView
                android:id="@+id/movieOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:textSize="@dimen/default_title_text_size"
                app:layout_constraintLeft_toLeftOf="@+id/moviePoster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moviePoster"
                tools:ignore="RtlHardcoded"
                tools:text="@string/item_movie_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>